--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 Django==4.2.5
 djangorestframework==3.14.0
-psycopg2==2.9.7
+psycopg2-binary==2.9.7
 Pillow==10.0.0
 django-crispy-forms==1.8.0
 crispy-bootstrap5==2025.6
@@ -9,5 +9,6 @@ django-filter==23.3
 django-countries==7.5.1
 gunicorn==21.2.0
 whitenoise==6.5.0
+
 
 
