--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,12 @@
 Django==4.2.5
 djangorestframework==3.14.0
-psycopg2-binary==2.9.7
+psycopg2-binary==2.9.6
 Pillow==10.0.0
 django-crispy-forms==1.8.0
-crispy-bootstrap5==2025.6
+crispy-bootstrap5==0.7
 django-allauth==0.57.0
 django-filter==23.3
 django-countries==7.5.1
 gunicorn==21.2.0
 whitenoise==6.5.0
-
-
-
+dj-database-url==2.1.0
